# darq-ui

./: .gitignore  CHANGELOG.md  LICENSE  README.md  lets.yaml  pyproject.toml  pyrightconfig.json
.github/workflows/: release.yaml
client/: index.html  package-lock.json  package.json  vite.config.js
client/src/: config.js  constants.js  http.js  icons.jsx  main.jsx  utils.js
client/src/App/: App.css  App.jsx  Base.jsx  Menu.jsx  Routing.jsx  index.jsx
client/src/Auth/: AuthRequired.jsx  index.jsx
client/src/TasksControlPanel/: buttons.jsx  index.jsx
examples/: aiohttp_server.py  fastapi_server.py  lets.yaml  pyproject.toml
scripts/: release.sh
src/darq_ui/: darq.py  handlers.py
src/darq_ui/integration/: aiohttp.py
