[project]
name = "darq-ui"
version = "0.1.0"
description = "A UI for darq"
authors = [
    {name = "m.kindritskiy", email = "kindritskiy.m@gmail.com"},
]
dependencies = []
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
