[project]
name = "darq-ui-server"
version = "0.1.0"
description = "Example server for darq-ui"
authors = [{ name = "m.kindritskiy", email = "m.kindritskiy@smartweb.com.ua" }]
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.31.1",
  "darq>=0.11.2",
  "evo-aioredis>=1.3.4",
  "aiohttp>=3.10.10",
]
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }


[tool.pdm]
distribution = false

[tool.pdm.scripts]
fastapi-server = "python fastapi_server.py"
aiohttp-server = "python aiohttp_server.py"

[tool.pdm.dev-dependencies]
dev = ["-e file:///${PROJECT_ROOT}/..#egg=darq-ui"]
